[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peano-morton-viewer"
version = "0.1.0"
description = "Interactive viewer for ternary (or generalized base-N) Morton / Peano interleaving"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.8"
authors = [
  { name = "Joshua Holmes", email = "bendtomywillgamers@gmail.com" }
]
dependencies = [
  "numpy",
  "matplotlib"
]

[project.scripts]
peano-viewer = "peano_morton_viewer.__main__:main"
